# minirf

./: .gitignore  IMPLEMENTATION_PLAN.md  INFERENCE_SPEC.md  README.md  model.pt  pyproject.toml
notebooks/: 00_visualize_data.ipynb  01_forward_diffusion_sanity.ipynb  02_diffusion_testing.ipynb  generate_structures.ipynb
notebooks/.ipynb_checkpoints/: 00_visualize_data-checkpoint.ipynb  00_visualize_data-checkpoint.py  01_forward_diffusion_sanity-checkpoint.ipynb  02_diffusion_testing-checkpoint.ipynb
scripts/: analyze_dataset.py  analyze_runs.py  analyze_segments.py  check_data_size.py  compare_checkpoints.py  reconstruct_backbone.py
src/: data_cath.py  diffusion.py  eval.py  geom.py  inference.py  main.py  model.py  pdb_io.py  sampler.py  train.py  train_toy.py  viz.py
